--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # License   : GNU FDL v1.3 or later
-# Author    : XL04D
-# Mail      : aurelien@xload.IO
+# Author    : aurelien
+# Mail      : aurelien@hackers.camp
 # Project   : python courses
 #
 # Most of source code here are forked from different tutorial to improve
