--- a/README
+++ b/README
@@ -1,7 +1,16 @@
-# License   : GNU FDL v1.3 or later
-# Author    : aurelien
-# Mail      : aurelien@hackers.camp
-# Project   : python courses
+#!/usr/bin/env python3
+# License    : GNU GPL v3 or later
+# Author     : Aurélien DESBRIERES
+# Mail       : aurelien@hackers.camp
+# Project    : Python Courses
+# Created on : Sun Nov  2 10:26:02 2014
 #
-# Most of source code here are forked from different tutorial to improve
-# my Python Experience.
+# References
+#
+# pydoc - python.org documentation
+#
+#
+# Course material
+#
+# From different sources, books, code sources 
+#
