--- a/README
+++ b/README
@@ -1,16 +1,1 @@
-#!/usr/bin/env python3
-# License    : GNU GPL v3 or later
-# Author     : Aurélien DESBRIERES
-# Mail       : aurelien@hackers.camp
-# Project    : Python Courses
-# Created on : Sun Nov  2 10:26:02 2014
-#
-# References
-#
-# pydoc - python.org documentation
-#
-#
-# Course material
-#
-# From different sources, books, code sources 
-#
+PyEx is a repo for my own experimentation throught learning Python.
